src/test/ui/binop/binop-mul-i32-f32.stderr
error[E0277]: cannot multiply `i32` by `f32`
  --> $DIR/binop-mul-i32-f32.rs:2:7
   |
LL |     x * y
   |       ^ no implementation for `i32 * f32`
   |
   = help: the trait `Mul<f32>` is not implemented for `i32`
   = help: the following other types implement trait `Mul<Rhs>`:
             <&'a f32 as Mul<f32>>
             <&'a f64 as Mul<f64>>
             <&'a i128 as Mul<i128>>
             <&'a i16 as Mul<i16>>
             <&'a i32 as Mul<i32>>
             <&'a i64 as Mul<i64>>
             <&'a i8 as Mul<i8>>
             <&'a isize as Mul<isize>>
           and 49 others

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
